@@ -1,5 +1,7 @@
 TBD - 0.9.1
-- TODO: Working in the setuppagelogs.cpp to add a new log
+- TODO: Working in the DataBase to create different types of logs
+- TODO: Working in the setuppagelogs.cpp to manage the contests from the DB
+
 - Improved the DXMarathon code.
 - GUI: Added basic Satellite support.
 - GUI: It is possible to mark a QSL sent via bureau/direct & DX QSL as requested with one action from Search box.
